# n2_pairs_trader

./: .gitignore  404.html  Pipfile  __main__.py  ccxt_describe_scraper.py  ccxt_scraper_DEBUG_output.txt  ccxt_scraper_output.py  config-template.ini  config-template.py  config.ini  constants.py  debug.ipynb  dev3.ipynb  dev4.py  exchange_insights.ipynb  index.html  indicators.py  main.py  mkdocs.yml  open_position.py  position_manager.py  pyproject.toml  requirements.txt  requirements_backup_2.txt  requirements_dev.txt  spliffli.session  spliffli.session-journal  user-config.ini  utilities.py  utils.py
Docstrings/: index.html
How_it_works/: index.html
core/: __init__.py  config.py  constants.py  notifications.py  notifier.py  position_manager.py  utils.py
dev_scripts/: EventHandling.ipynb  ccxt-insights-1.md  dev.ipynb  dev2.py  dev_EventHandling.ipynb  dev_EventHandling.py  opening_positions.ipynb  output.txt
docs/: How_it_works.md  KuCoin_Extended.md  Logical_Sequence.md  Objectives_&_Requirements.ipynb  README.MD  creating_a_new_strategy.md  further_ideas.md  index.md  message-for-noe.md  notes.md  objectives_&_requirements.md
further_ideas/: index.html
message-for-noe/: index.html
scripts/: asci-art.py  ccxt_describe_scraper.py  ccxt_scraper_output.txt  dev.ipynb  dev.py  dev2.py  dev3.ipynb  exchange.py  kucoin.py  kucoin_extended.py  load_api_keys.py  validating_ohlcv.ipynb
search/: search_index.json
site/: 404.html  index.html
strategies/: n2_supertrend.py  n2_supertrend_old.py  strategy_base.py  supertrend.py
user/: config-template.ini
(+101 files in other folders)
